fixed toggle password visibility login

--- a/ASI.Basecode.WebApp/wwwroot/css/login.css
+++ b/ASI.Basecode.WebApp/wwwroot/css/login.css
@@ -78,19 +78,13 @@ label {
     font-weight: bold;
 }
 
-input {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin-bottom: 10px;
-    width: 100%;
-}
 
 .password-container {
     position: relative;
     display: flex;
     align-items: center;
 }
+
 
     .password-container input {
         padding-right: 40px; /* Make space for the eye button */
@@ -109,7 +103,6 @@ input {
         .password-container .toggle-password img {
             width: 20px;
             height: 20px;
-            margin-bottom: 10px;
             transition: opacity 0.3s ease-out, top 0.3s step-end;
         }
 
